appId: com.snandur2.glide
---
- launchApp
- tapOn:
    text: "Sign In"
    optional: true
- assertVisible:
    text: "Email"
    optional: true
- assertVisible:
    text: "Password"
    optional: true
- tapOn:
    text: "Create Account"
    optional: true
- assertVisible:
    text: "Full Name"
    optional: true
- assertVisible:
    text: "Confirm Password"
    optional: true
- tapOn:
    text: "Sign In"
    optional: true
